Frozen autocommit 2024-04-23 15:52:19.278154